--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang='fr'>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Snowtrick{% endblock %}</title>
+        <meta name="viewport" content="width=device-width">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <link rel="stylesheet" href="css/style.css">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -14,6 +19,17 @@
         {% endblock %}
     </head>
     <body>
+        {% include "tools/nav.html.twig" %}
+
         {% block body %}{% endblock %}
+        <script>
+            const menuHamburger = document.querySelector(".bx")
+            const navLinks = document.querySelector(".links")
+    
+            menuHamburger.addEventListener('click',()=>{
+            navLinks.classList.toggle('mobile-menu')
+            })
+        </script>
+        <script src="js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
