--- a/templates/tools/nav.html.twig
+++ b/templates/tools/nav.html.twig
@@ -5,6 +5,7 @@
             <li><a href="/home">Home</a></li>
             <li><a href="#">Connexion</a></li>
             <li><a href="#">Inscription</a></li>
+            <li><a href="#">test</a></li>
             <li><a href="#">Déconnexion</a></li>
         </ul>    
     </div><i class='bx bx-menu' alt='Menu Hamburger'></i>
