User entity, firewall and login form

--- a/templates/tools/nav.html.twig
+++ b/templates/tools/nav.html.twig
@@ -2,11 +2,12 @@
     <a href="#" class="logo">Snowtrick</a>
     <div class="links">
         <ul>
-            <li><a href="/home">Home</a></li>
-            <li><a href="#">Connexion</a></li>
-            <li><a href="#">Inscription</a></li>
-            <li><a href="#">test</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/connexion">Connexion</a></li>
+            <li><a href="/category">Category</a></li>
+            <li><a href="/tricks">tricks</a></li>
             <li><a href="#">Déconnexion</a></li>
         </ul>    
-    </div><i class='bx bx-menu' alt='Menu Hamburger'></i>
+    </div>
+    <i class='bx bx-menu' alt='Menu Hamburger'></i>
 </nav>
