--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&family=Rubik+Bubbles&display=swap');
 
+html { /*
+    --green-color: #18534F;
+    --lightgreen-color: #226D68;
+    --light-color: #ECF8F6;
+    --yellow-color: #FEEAA1;
+    --darkyellow-color: #D6955B;
+    /* seconde palette */
+    --ligthblue-color: #27C7D4;
+    --white-color: #ffffff;
+    --black-color: #000000;
+    --creamy-color: #FDF0E7;
+    --orange-color: #FE9063;
+    --lightred-color: #EA5863;
+    font-size: 100%;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,18 +24,28 @@
 }
 
 header {
-    height: 90vh;
-    width: 100vw;
+    z-index: -100;
+    margin-top: 5%;
+    margin-left: 10%;
+    height: 80vh;
+    width: 80%;
+    transform: rotate(4deg);
+    border: 20px solid white;
     background: url('../images/background_snowtrick.jpeg');
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /*background-attachment: ;*/
     background-size: cover;
-    border-bottom: 5px solid black;
 }
 
+/* -------------------- Navigation -------------------- */
 .nav {
+    z-index: 10;
+    top: 0;
     position: fixed;
-    padding: 50px;
+    height: 100px;
+    background-color: rgba(0, 0, 0, 0.716);
+    backdrop-filter: blur(4px);
+    padding: 40px;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -27,15 +53,17 @@ header {
 }
 
 .nav a {
-    color: burlywood;
+    color: var(--orange-color);
     text-decoration: none;
 }
 
 .nav .logo {
-    color: #A5483F;
-    font-size: 2em;
+    top: 0;
+    left: 0;
+    margin-top: -20px;
+    color: var(--lightred-color);
+    font-size: 2.5em;
     font-weight: 500;
-    font-family: 'Rubik Bubbles', sans-serif;
 }
 
 .nav .links ul {
@@ -48,12 +76,17 @@ header {
 }
 
 .nav .links ul li a {
-    color: #161A32;
+    color: var(--orange-color);
     font-size: 1.2em;
-    font-weight: 600;
+    padding-top: 5%;
+    transition: all 0.1s ease;
 }
 
-.bx {
+.nav .links ul li a:hover {
+    border-top: 3px solid var(--lightred-color);
+}
+
+.bx-menu {
     position: absolute;
     right: 50px;
     top: 50px;
@@ -99,4 +132,86 @@ header {
     .nav .links ul li a {
         color: lightgrey;
     }
+}
+/* -------------------- body -------------------- */
+
+body {
+    left: 0;
+    background: var(--creamy-color);
+    width: 100%;
+}
+
+/* -------------------- Footer -------------------- */
+
+footer {
+    left: 0;
+    bottom: 0;
+    background: var(--creamy-color);
+    margin-top: 5%;
+    padding-top: 2%;
+}
+
+.nav_footer {
+    text-align: center;
+}
+
+.nav_footer a {
+    text-decoration: none;
+    font-size: 25px;
+    color: black;
+}
+
+.nav_social {
+    width: 75%;
+    height: 100px;
+    margin-left: 5%;
+    background-color: var(--orange-color);
+}
+
+.nav_social ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav_social i {
+    font-size: 3em;
+    padding: 10px 50px;
+    color: black;
+}
+
+.liens_utiles {
+    right: 0;
+    width: 75%;
+    margin-left: 20%;
+    height: 100px;
+    background-color: var(--ligthblue-color);
+}
+
+.liens_utiles ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.liens_utiles ul li {
+    justify-content: center;
+    align-items: center;
+    font-size: 3em;
+    padding: 10px 50px;
+}
+
+.liens_utiles ul li a:hover {
+    border-bottom: 2px solid black;
+}
+
+.copyright {
+    margin-top: 1%;
+    padding-top: 1%;
+    font-size: 1.2em;
+    text-align: center;
+    border-top: 2px dotted black;
+
 }
