add login system

--- a/templates/tools/nav.html.twig
+++ b/templates/tools/nav.html.twig
@@ -4,9 +4,10 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/connexion">Connexion</a></li>
+            <li><a href="/inscription">inscription</a></li>
             <li><a href="/category">Category</a></li>
             <li><a href="/tricks">tricks</a></li>
-            <li><a href="#">Déconnexion</a></li>
+            <li><a href="/deconnexion">Déconnexion</a></li>
         </ul>    
     </div>
     <i class='bx bx-menu' alt='Menu Hamburger'></i>
