--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Tricks index{% endblock %}
 
 {% block body %}
+    <header></header>
     <h1>Tricks index</h1>
     <div class="tricks_home">
         {% for trick in tricks %}
