--- a/templates/tools/nav.html.twig
+++ b/templates/tools/nav.html.twig
@@ -1,13 +1,17 @@
 <nav class="nav">
-    <a href="#" class="logo">Snowtrick</a>
+    <a href="#" class="logo">Snowtricks</a>
     <div class="links">
-        <ul>
+        <ul>           
             <li><a href="/">Home</a></li>
-            <li><a href="/connexion">Connexion</a></li>
-            <li><a href="/inscription">inscription</a></li>
             <li><a href="/category">Category</a></li>
-            <li><a href="/tricks">tricks</a></li>
-            <li><a href="/deconnexion">Déconnexion</a></li>
+            <li><a href="#tricks">tricks</a></li>
+
+            {% if app.user %}
+                <li><a href="#">Profil</a></li>
+                <li><a href="/deconnexion">Déconnexion</a></li>
+            {% else %}
+                <li><a href="/connexion">Connexion</a></li>
+            {% endif %}
         </ul>    
     </div>
     <i class='bx bx-menu' alt='Menu Hamburger'></i>
