--- a/templates/email/emailValidationInscription.html.twig
+++ b/templates/email/emailValidationInscription.html.twig
@@ -1,5 +1,4 @@
-Salut 
-
-<br>
-
+<h1>Bienvenue dans le communauté Snowtricks</h1><br/>
+<h2>Veuillez cliquer sur le lien pour valider la création de votre compte !</h2>
+<br/>
 <a href="{{ url('confirm.account', {"token": token}) }}">Cliquer ici pour confirmer la création de votre compte</a>
