--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -6,6 +6,6 @@
     <div class="container">
         <h1 class="mt-4">Formulaire d'inscription</h1>
 
-        {{ form(form) }}
+        {{ form(registrationForm) }}
     </div>
 {% endblock %}
