--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Category{% endblock %}
+{% block title %}Nouvelle categorie{% endblock %}
 
 {% block body %}
-    <h1>Create new Category</h1>
+<div class="container">
+    <h1>Formulaire de création d'une nouvelle categorie</h1>
 
     {{ include('category/_form.html.twig') }}
-
-    <a href="{{ path('app_category_index') }}">back to list</a>
+</div>
 {% endblock %}
