--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -4,8 +4,9 @@
 
 {% block body %}
 <div class="container">
-    <h1>Formulaire de création d'une nouvelle categorie</h1>
-
-    {{ include('category/_form.html.twig') }}
+    <div class="categorie_new">
+        <h1>Formulaire de création d'une nouvelle categorie</h1>
+        {{ include('category/_form.html.twig') }}
+    </div>
 </div>
 {% endblock %}
