--- a/templates/tools/footer.html.twig
+++ b/templates/tools/footer.html.twig
@@ -9,7 +9,7 @@
         </div>
         <div class="liens_utiles">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="{{ path('app_category_index') }}">Catégories</a></li>
                 <li><a href="#">Mentions Legales</a></li>
                 <li><a href="#">Nous contacter</a></li>
             </ul>
