feat: lot of change and close to the end

--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -4,34 +4,40 @@
 
 {% block body %}
 <div class="container">
-    <h1>Les Categories</h1>
+    <div class="categories">
+        <h1>Les Categories</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nom</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for category in categories %}
-            <tr>
-                <td>{{ category.name }}</td>
-                <td>
-                    <form method="post" action="{{ path('app_category_delete', {'id': category.id}) }}" onsubmit="return confirm('Voulez-vous supprimer cette catégorie ?');">
-                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-                        <button class="btn">Supprimer</button>
-                    </form>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for category in categories %}
+                    <tr>
+                        <td>{{ category.name }}</td>
+                        {% if app.user %}
+                            <td>
+                                <form method="post" action="{{ path('app_category_delete', {'id': category.id}) }}" onsubmit="return confirm('Voulez-vous supprimer cette catégorie ?');">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
+                                    <button class="btn">Supprimer</button>
+                                </form>
+                            </td>
+                        {% else %}
+                            <td>Vous devez vous connecter pour effectuer une action</td>
+                        {% endif %}
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="3">no records found</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_category_new') }}">Nouvelle catégorie</a>
+        <a href="{{ path('app_category_new') }}">Nouvelle catégorie</a>
+    </div>
 </div>
 {% endblock %}
