--- a/templates/tools/js.html.twig
+++ b/templates/tools/js.html.twig
@@ -6,3 +6,4 @@
 <script type="text/javascript" src="{{ asset("js/deleteVideos.js") }}"></script>
 <script type="text/javascript" src="{{ asset("js/loadMore.js") }}"></script>
 <script type="text/javascript" src="{{ asset("js/deleteImages.js") }}"></script>
+<script type="text/javascript" src="{{ asset("js/showMedia.js") }}"></script>
