--- a/templates/tricks/show.html.twig
+++ b/templates/tricks/show.html.twig
@@ -34,6 +34,8 @@
             </div>
             {% endif %}
         </div>
+        <a class="show_media" >afficher les médias</a>
+        <a class="hide_media" >cacher les médias</a>
         <div class="tricks_media">
             <h1>Média</h1>
             <div class="row images_tricks">
