fix: codacy issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1034,6 +1034,10 @@ body {
     height: 55vh;
 }
 
+.delete_trick .alert-danger {
+    height: auto;
+}
+
 /* -------------------- Les catégories -------------------- */
 
 .categories {
