fix: data security

--- a/templates/security/forgottenPassword.html.twig
+++ b/templates/security/forgottenPassword.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
         <h1 class="mt-4">Page oublie du mot de passe</h1>
         <h2>Ici vous allez pouvoir recréer un mot de passe,</h2>
-        <h2>mais taché de le noter cette fois ;)</h2>
+        <h2>mais tachez de le noter cette fois ;)</h2>
         <h2>Nous avons besoin de votre email pour vous retrouver</h2><br/>
         {{ form_start(requestPassForm)}}
         {{ form_row(requestPassForm.email)}}
